# ITK4_topics

./: CMakeLists.txt  README  affine.cxx  dummyfile  functor_speed_test.cxx  itkDemonsImageToImageMetric.h  itkDemonsImageToImageMetric.txx  itkDemonsImageToImageMetricTest.cxx  itkImageToData.h  itkImageToImageNeighborhoodNormalizedCrossCorrelationFunction.h  itkImageToImageNeighborhoodNormalizedCrossCorrelationFunction.txx  itkImageToImageNeighborhoodNormalizedCrossCorrelationTest.cxx  itkTemplatedResampleImageFilter.h  itkTemplatedResampleImageFilter.txx  templated_resampler.cxx
CMake/: ITKGroups.cmake
Code/Review/: itkDeformationFieldTransform.h  itkDeformationFieldTransform.txx  itkObjectToObjectMetric.h  itkObjectToObjectMetric.txx
Documentation/: LocalAffineDerivative.tex
Examples/Registration/: CMakeLists.txt
Modules/: filelist.tmp
Modules/Core/Common/: itk-module.cmake
Modules/Core/Common/include/: itkBSplineScatteredDataPointSetToImageFilter.h  itkCoxDeBoorBSplineKernelFunction.h
Modules/Core/Common/test/: CMakeLists.txt
Modules/Core/ImageFunction/include/: itkVectorCentralDifferenceImageFunction.h  itkVectorCentralDifferenceImageFunction.hxx  itkVectorInterpolateImageFunction.h  itkVectorLinearInterpolateImageFunction.h  itkVectorLinearInterpolateImageFunction.hxx  itkVectorLinearInterpolateImageFunction.txx  itkVectorNearestNeighborInterpolateImageFunction.h
Modules/Core/ImageFunction/test/: CMakeLists.txt  itkVectorCentralDifferenceImageFunctionTest.cxx
Modules/Core/SpatialObjects/: itk-module.cmake
Modules/Core/Transform/: itk-module.cmake
Modules/Core/Transform/include/: itkBSplineDeformableTransform.h  itkBSplineDeformableTransform.txx  itkBSplineDeformationFieldTransform.h  itkBSplineDeformationFieldTransform.hxx  itkBSplineDeformationFieldTransform.txx  itkBSplineTransform.h  itkCenteredAffineTransform.h  itkCenteredAffineTransform.hxx  itkCenteredAffineTransform.txx  itkCenteredEuler3DTransform.h  itkCenteredEuler3DTransform.hxx  itkCenteredEuler3DTransform.txx  itkCenteredRigid2DTransform.h  itkCenteredRigid2DTransform.hxx  itkCenteredRigid2DTransform.txx  itkCenteredSimilarity2DTransform.h  itkCenteredSimilarity2DTransform.txx  itkCompositeTransform.h  itkCompositeTransform.hxx  itkCompositeTransform.txx  itkDeformationFieldTransform.h  itkDeformationFieldTransform.hxx  itkDeformationFieldTransform.txx  itkDisplacementFieldTransform.h  itkDisplacementFieldTransform.hxx  itkEuler3DTransform.h  itkEuler3DTransform.hxx  itkEuler3DTransform.txx  itkIdentityTransform.h  itkImageVectorTransformParametersHelper.h  itkImageVectorTransformParametersHelper.txx  itkKernelTransform.h  itkKernelTransform.hxx  itkKernelTransform.txx  itkMatlabTransformIO.h  itkMatrixOffsetTransformBase.h  itkMatrixOffsetTransformBase.hxx  itkMatrixOffsetTransformBase.txx  itkQuaternionRigidTransform.h  itkQuaternionRigidTransform.hxx  (+52 more)
Modules/Core/Transform/src/: itkTransformIOBase.cxx  itkTxtTransformIO.cxx
Modules/Core/Transform/test/: CMakeLists.txt  itkAffineTransformTest.cxx  itkBSplineDeformableTransformTest.cxx  itkBSplineDeformableTransformTest2.cxx  itkBSplineDeformationFieldTransformTest.cxx  itkCompositeTransformTest.cxx  itkDeformationFieldTransformTest.cxx  itkDisplacementFieldTransformTest.cxx  itkTimeVaryingVelocityFieldTransformTest.cxx  itkTransformTest.cxx
Modules/Filtering/BiasCorrection/include/: itkMRIBiasFieldCorrectionFilter.h
Modules/Filtering/DisplacementField/include/: itkDisplacementFieldTransform.h  itkDisplacementFieldTransform.hxx
Modules/Filtering/DisplacementField/test/: itkDisplacementFieldTransformTest.cxx  itkTimeVaryingVelocityFieldTransformTest.cxx
Modules/Filtering/ImageGrid/include/: itkResampleImageFilter.h  itkResampleImageFilter.hxx  itkVectorResampleImageFilter.hxx  itkVectorResampleImageFilter.txx
Modules/Nonunit/IntegratedTest/test/: itkOptimizersHierarchyTest.cxx
Modules/Nonunit/Review/include/: itkBSplineControlPointImageFunction.h  itkBSplineDeformableTransformInitializer.h  itkBSplineDeformableTransformInitializer.txx  itkCompositeTransform.h  itkCompositeTransform.hxx  itkCompositeTransform.txx  itkCompositeTransformReader.hxx  itkDeformationFieldTransform.h  itkDeformationFieldTransform.txx  itkImageVectorTransformParameters.h  itkImageVectorTransformParameters.txx  itkObjectToObjectMetric.h  itkOptImageToImageMetricsTest2.h  itkTransformParameters.h  itkTransformParameters.txx  itkVectorLinearInterpolateNearestNeighborExtrapolateImageFunction.h  itkVectorLinearInterpolateNearestNeighborExtrapolateImageFunction.txx
Modules/Nonunit/Review/test/: CMakeLists.txt  itkCompositeTransformTest.cxx  itkDeformationFieldTransformTest.cxx  itkImageVectorTransformParametersTest.cxx  itkReviewHeaderTest.cxx  itkTransformParametersTest.cxx  itkTransformToDeformationFieldSourceTest.cxx
Modules/Numerics/HighDimensionalOptimizers/: itk-module.cmake
Modules/Numerics/HighDimensionalOptimizers/include/: itkArray1DToData.h  (+10 more)
Modules/Numerics/HighDimensionalOptimizers/src/: CMakeLists.txt  itkGradientDescentObjectOptimizer.cxx  itkGradientDescentObjectOptimizerBase.cxx  itkQuasiNewtonObjectOptimizer.cxx
Modules/Numerics/Optimizers/: itk-module.cmake
Modules/Registration/HighDimensionalMetrics/: itk-module.cmake
Modules/Registration/Refactoring/: CMakeLists.txt  filelist.tmp  itk-module.cmake
Modules/Registration/Refactoring/src/: CMakeLists.txt  itkArray1DToData.cxx  itkGradientDescentObjectOptimizer.cxx  itkGradientDescentObjectOptimizerBase.cxx  itkQuasiNewtonLocalSupportObjectOptimizer.cxx  itkQuasiNewtonObjectOptimizer.cxx
Modules/Registration/Refactoring/test/testSong/: CMakeLists.txt  itkCenteredCompositeTransform.h  itkCenteredCompositeTransform.hxx  itkCenteredCompositeTransform.txx  itkCompositeAffineTransformDemonsRegistrationTest.cxx  itkCompositiveAffineTest.cxx  itkRotate2DTransform.h  itkRotate2DTransform.hxx  itkRotate2DTransform.txx  itkShear2DTransform.h  itkShear2DTransform.hxx  itkShear2DTransform.txx
Testing/Code/Review/: CMakeLists.txt  itkObjectToObjectMetricTest.cxx  itkReviewTests6.cxx
(+295 files in other folders)
